--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,17 +5,33 @@ body {
 #container {
   background-color: #dddddd;
   border-radius: 25px;
-  border: 2px solid grey;
-  padding: 20px;
-  width: 90%;
+  border: 2px solid #131a51;
+  padding: 1%;
+  width: 70%;
   height: 20%;
-  margin: auto;
+  margin: 15% 15% 15% 15%;
+  position: relative;
 }
 
 #name {
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-  font-size: 24px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 40px;
 	font-weight: 500;
+}
+
+#text {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#contact {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  display: block;
+  position: relative;
+  margin-left: 75%;
+  width: 30%;
+  font-weight: 600;
+  font-size: 16px;
+  word-wrap: break-word;
 }
 
 #horizontalLine {
@@ -30,12 +46,10 @@ body {
   cursor: pointer;
   display: inline-block;
   line-height: 1em;
-  margin: 15px 20px;
+  margin: 15px;
   outline: none;
-  padding: 10px 24px 8px;
+  padding: 10px 24px;
   position: relative;
-  text-transform: uppercase;
-  font-weight: 700;
 }
 
 .button-movement:before,
