update geoclique link

--- a/views/main.pug
+++ b/views/main.pug
@@ -17,7 +17,7 @@ block layout-content
         div.Title
           h1 Chief Technology Officer 
           h2.AddBottomMargin @ <span style="color: #393863">Geoclique</span>
-          a.ClickableBold(href='https://geoclique.hubspotpagebuilder.com/main') > Interested? Click here to learn more
+          a.ClickableBold(href='https://welcome.geoclique.com') > Interested? Click here to learn more
           br
           br
           a.ClickableBold(href='https://www.linkedin.com/company/geoclique-inc/') <span style="color: #0077B3">or check us out on LinkedIn</span>
