update current job + some css stuff

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -2,7 +2,7 @@ extends layout
 
 block layout-content
   div.View.Background
-    h1.Banner Contact Info
+    h1.Banner.FadeIn Contact Info
     div.View
       div.Message.Contact.FadeIn
         div.Title
