--- a/views/main.pug
+++ b/views/main.pug
@@ -2,16 +2,16 @@ extends layout
 
 block layout-content
   div.View.Background
-    h1.Banner Skyler Wittman
+    h1.Banner.FadeIn Skyler Wittman
     div.View
       div.Message.MainPage.FadeIn
         div.Title
-          h1 Web Software Developer
-          h2 @ <span style="color: #18A6D9">Mnubo / AspenTech</span> >> <span style="color: #DB3532">Scala</span>
+          h1 Web Developer
+          h2 POS + Payments + Data @ <span style="color: #EE5153">Lightspeed POS </span> >> <span style="color: #8892BD">PHP</span>
           <html>
           br
-          h3 Formerly POS + Payments gateway >> <span style="color: #8892BD">PHP</span>
-          h3 @ <span style="color: #EE5153">Lightspeed POS </span>
+          br
+          h3 Formerly @ <span style="color: #18A6D9">Mnubo / AspenTech </span>  >>  <span style="color: #DB3532">Scala</span>
           </html>
       div.Message.MainPage.FadeIn
         div.Title
