remove old stuff, make some small changes

--- a/views/main.pug
+++ b/views/main.pug
@@ -7,7 +7,7 @@ block layout-content
       div.Message.MainPage.FadeIn
         div.Title
           h1 Web Developer
-          h2 POS + Payments + Data @ <span style="color: #EE5153">Lightspeed POS </span> >> <span style="color: #8892BD">PHP</span>
+          h2 POS + Payments + Data @ <span style="color: #EE5153">Lightspeed POS </span> >> <span style="color: #8892BD">PHP/</span><span style="color: #306998">pyt</span><span style="color: #FFD43B">hon</span>
           <html>
           br
           br
