--- a/public/style.css
+++ b/public/style.css
@@ -37,9 +37,8 @@ h1 {
 h2 {
     font-family: "Raleway", sans-serif;
     padding: 0;
-    margin: 0;
+    margin: auto;
     color: #2a3747;
-    align-items: right;
     font-size: 1.9vw;
 }
 
@@ -108,7 +107,7 @@ a {
 }
 
 .Message {
-    padding: 25px;
+    padding: 20px;
     border-bottom: var(--ui-shadow-border);
     box-shadow: var(--ui-shadow);
     background: #f8efef;
