--- a/public/css/input.css
+++ b/public/css/input.css
@@ -3,11 +3,19 @@
 @tailwind utilities;
 
 .span {
-  @apply bg-white rounded-xl top-4 text-3xl mt-2 py-8 px-12
+  @apply bg-white rounded-xl top-4 mt-2 py-8 px-12
+}
+
+.main-title {
+  @apply text-center text-6xl font-sans font-medium text-text-grey py-4 bg-indigo-900 rounded-2xl w-6/12 mx-adjust mt-2
+}
+
+.terminal-span {
+  @apply text-lg top-4 mt-2 py-2 px-12 bg-terminal-green rounded-md text-pink-200
 }
 
 .fter {
-  @apply bg-slate-400 justify-end text-right px-2
+  @apply bg-text-grey justify-end text-right px-2
 }
 
 .img {
@@ -15,9 +23,9 @@
 }
 
 .btn {
-  @apply bg-red-500 text-slate-100 rounded-full py-4 px-8
+  @apply bg-indigo-900 text-text-grey font-medium rounded-full py-4 px-8 border-2 border-transparent
 }
 
 .btn:hover {
-  @apply bg-red-400
+  @apply bg-pink-400 border-lime-500 border-2 text-zinc-900
 }
