--- a/public/css/input.css
+++ b/public/css/input.css
@@ -2,30 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-.span {
-  @apply bg-white rounded-xl top-4 mt-2 py-8 px-12
+.daylight-span {
+  @apply bg-slate-200 rounded-xl top-2 mt-2 py-6 px-12
 }
 
-.main-title {
-  @apply text-center text-6xl font-sans font-medium text-text-grey py-4 bg-indigo-900 rounded-2xl w-6/12 mx-adjust mt-2
+.title-common {
+  @apply py-4 rounded-2xl mt-2 text-center text-6xl font-sans font-medium text-text-grey 
 }
 
 .terminal-span {
   @apply text-lg top-4 mt-2 py-2 px-12 bg-terminal-green rounded-md text-pink-200
 }
 
-.fter {
-  @apply bg-text-grey justify-end text-right px-2
+.footer-common {
+  @apply bg-footer-grey justify-end text-right px-2 py-1
 }
 
 .img {
-  @apply h-40 w-40 mx-12
+  @apply h-40 w-40 mx-18
 }
 
-.btn {
-  @apply bg-indigo-900 text-text-grey font-medium rounded-full py-4 px-8 border-2 border-transparent
+.btn-common {
+  @apply text-text-grey font-medium text-lg rounded-full py-4 px-8 border-2 border-transparent w-48
 }
 
-.btn:hover {
+.btn-common:hover {
   @apply bg-pink-400 border-lime-500 border-2 text-zinc-900
 }
