--- a/public/views/daylight.ejs
+++ b/public/views/daylight.ejs
@@ -11,29 +11,31 @@
     <title>Hi Jess :)</title>
 </head>
 
-<body class="bg-yellow-400">
+<body class="bg-gradient-to-tr from-indigo-500 via-orange-400 to-yellow-400">
 
     <!-- height container -->
-    <div class="flex flex-col pb-4" style="height:calc(100vh - 24px)">
+    <div class="flex flex-col pb-4" style="height:calc(100vh - 32px)">
         <!-- horizontal container -->
-        <div class="container flex justify-center h-screen">
+        <div class="container flex justify-center h-screen max-w-xl">
             <!-- vertical container -->
             <div class="flex flex-col gap-4">
-                <span class="span">How much daylight was there today?</span>
-                <span class="span">Good day gorgeous :)</span>
-                <span id="daylight_span" class="span">
-                    <%= output %>
+                <span class="mt-2 py-4 px-12 text-4xl font-bold text-gray-800 mx-20">Oh hi Jess! &#128037;</span>
+                <span class="daylight-span text-2xl font-medium">How much daylight was there today?</span>
+                <span id="daylight_span" class="daylight-span text-2xl font-medium">
+                    <%- sunrise_sunset_output %> <br><br>
+                    <%- total_daylight_output %> <br>
+                    Love you 💛
                 </span>
             </div>
         </div>
 
-        <div class="flex justify-center gap-4 ">
-            <a href="/ "><button class="btn ">Main Page</button></a>
-            <a href="/contact "><button class="btn ">Contact me</button></a>
+        <div class="flex justify-center gap-4">
+            <a href="/ "><button class="btn-common bg-blue-600 text-gray-800">Main Page</button></a>
+            <a href="/contact "><button class="btn-common bg-blue-600 text-gray-800">Contact me</button></a>
         </div>
     </div>
 
-    <footer class="justify-end bg-slate-400 text-right px-2 ">Built with &#128150; by me using Express.js + tailwindcss</footer>
+    <footer class="footer-common">Built with &#128150; by me using Express.js + tailwindcss</footer>
 
 </body>
 
