--- a/public/pages/contact.ejs
+++ b/public/pages/contact.ejs
@@ -2,13 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    <link rel="stylesheet" type="text/css" href="../css/output.css" />
-
-    <title>Contact Me</title>
+    <%- include('../views/header.ejs'); %>
+        <title>Contact Me</title>
 </head>
 
 <body class="bg-gradient-to-r from-emerald-800 to-pink-gradient">
@@ -21,9 +16,12 @@
             <div class="flex flex-col gap-4">
                 <span class="title-common bg-indigo-700">Contact Me</span>
                 <div class="flex flex-col gap-4 ">
-                    <a href="https://www.linkedin.com/in/skylerwittman"><img class="img" src='../images/LinkedInImage.png' alt='LinkedIn'></a>
-                    <a href="https://github.com/SkylerWittman"><img class="img" src='../images/GitHubImage.png' alt='GitHub'></a>
-                    <a href="mailto:skyler.wittman@gmail.com"><img class="img" src='../images/Email.png' alt='Email'></a>
+                    <a href="https://www.linkedin.com/in/skylerwittman"><img class="img"
+                            src='../images/LinkedInImage.png' alt='LinkedIn'></a>
+                    <a href="https://github.com/SkylerWittman"><img class="img" src='../images/GitHubImage.png'
+                            alt='GitHub'></a>
+                    <a href="mailto:skyler.wittman@gmail.com"><img class="img" src='../images/Email.png'
+                            alt='Email'></a>
                 </div>
             </div>
         </div>
@@ -34,7 +32,7 @@
         </div>
     </div>
 
-    <footer class="footer-common">Built with &#128150; by me using Express.js + tailwindcss</footer>
+    <%- include('../views/footer.ejs'); %>
 
 </body>
 
