--- a/public/pages/contact.ejs
+++ b/public/pages/contact.ejs
@@ -9,18 +9,18 @@
 <body class="bg-gradient-to-r from-emerald-800 to-pink-gradient">
 
     <!-- height container -->
-    <div class="flex flex-col pb-4" style="height:calc(100vh - 32px)">
+    <div class="flex flex-col pb-3 container-height md:medium-container-height">
         <!-- horizontal container -->
         <div class="container flex justify-center h-screen">
             <!-- vertical container -->
             <div class="flex flex-col gap-4">
                 <span class="title-common bg-indigo-700">Contact Me</span>
                 <div class="flex flex-col gap-4 ">
-                    <a href="https://www.linkedin.com/in/skylerwittman"><img class="img"
+                    <a href="https://www.linkedin.com/in/skylerwittman"><img class="img mx-18"
                             src='../images/LinkedInImage.png' alt='LinkedIn'></a>
-                    <a href="https://github.com/SkylerWittman"><img class="img" src='../images/GitHubImage.png'
+                    <a href="https://github.com/SkylerWittman"><img class="img mx-18" src='../images/GitHubImage.png'
                             alt='GitHub'></a>
-                    <a href="mailto:skyler.wittman@gmail.com"><img class="img" src='../images/Email.png'
+                    <a href="mailto:skyler.wittman@gmail.com"><img class="img mx-18" src='../images/Email.png'
                             alt='Email'></a>
                 </div>
             </div>
