--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -8,15 +8,16 @@
 
 <body class="bg-gradient-to-r from-cyan-900 to-emerald-800">
 
-    <div class="absolute right-6 top-4">
-        <img class="h-48 w-48 rounded-full" src="../images/Headshot825x825.png" alt="Skyler headshot">
-    </div>
     <!-- height container -->
-    <div class="flex flex-col pb-4" style="height:calc(100vh - 32px)">
+    <div class="flex flex-col pb-3 container-height md:medium-container-height">
+        <div class="flex justify-center xl:absolute xl:right-6 xl:top-4">
+            <img class="img rounded-full" src="../images/Headshot825x825.png" alt="Skyler headshot">
+        </div>
+
         <!-- horizontal container -->
         <div class="container flex justify-center h-screen">
             <!-- vertical container -->
-            <div class="flex flex-col gap-4">
+            <div class="flex flex-col gap-2 md:gap-4">
                 <span class="title-common w-6/12 mx-adjust bg-indigo-900">Skyler Wittman</span>
                 <span class="terminal-span">Product-minded developer focused on solving customer problems</span>
                 <span class="terminal-span">
