--- a/public/views/daylight.ejs
+++ b/public/views/daylight.ejs
@@ -9,7 +9,7 @@
 <body class="bg-gradient-to-tr from-indigo-500 via-orange-400 to-yellow-400">
 
     <!-- height container -->
-    <div class="flex flex-col pb-3 container-height md:medium-container-height">
+    <div class="flex flex-col pb-3 container-height">
         <!-- horizontal container -->
         <div class="container flex justify-center h-screen max-w-xl">
             <!-- vertical container -->
