--- a/public/pages/contact.ejs
+++ b/public/pages/contact.ejs
@@ -9,7 +9,7 @@
 <body class="bg-gradient-to-r from-emerald-800 to-pink-gradient">
 
     <!-- height container -->
-    <div class="flex flex-col pb-3 container-height md:medium-container-height">
+    <div class="flex flex-col pb-3 container-height">
         <!-- horizontal container -->
         <div class="container flex justify-center h-screen">
             <!-- vertical container -->
