--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -9,7 +9,7 @@
 <body class="bg-gradient-to-r from-cyan-900 to-emerald-800">
 
     <!-- height container -->
-    <div class="flex flex-col pb-3 container-height md:medium-container-height">
+    <div class="flex flex-col pb-3 container-height">
         <div class="flex justify-center xl:absolute xl:right-6 xl:top-4">
             <img class="img rounded-full" src="../images/Headshot825x825.png" alt="Skyler headshot">
         </div>
