--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -9,7 +9,7 @@
 <body class="bg-gradient-to-r from-cyan-900 to-emerald-800">
 
     <!-- height container -->
-    <div class="flex flex-col pb-3 container-height">
+    <div class="flex flex-col gap-2 flex-shrink pb-2 sm:pb-3 container-height">
         <div class="flex justify-center xl:absolute xl:right-6 xl:top-4">
             <img class="img rounded-full" src="../images/Headshot825x825.png" alt="Skyler headshot">
         </div>
@@ -41,7 +41,7 @@
                 </span>
             </div>
         </div>
-        <div class="flex justify-center gap-4">
+        <div class="flex justify-center gap-2 sm:gap-4">
             <a href="/contact"><button class="btn-common bg-indigo-900">Contact me</button></a>
             <a href="/daylight"><button class="btn-common bg-indigo-900">Daylight widget</button></a>
         </div>
