More responsive fixes

--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -10,7 +10,7 @@
 
     <!-- height container -->
     <div class="flex flex-col gap-2 flex-shrink pb-2 sm:pb-3 container-height">
-        <div class="flex justify-center xl:absolute xl:right-6 xl:top-4">
+        <div class="flex justify-center pt-1 xl:absolute xl:right-6 xl:top-4">
             <img class="img rounded-full" src="../images/Headshot825x825.png" alt="Skyler headshot">
         </div>
 
