--- a/public/css/output.css
+++ b/public/css/output.css
@@ -488,14 +488,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100vh;
 }
 
-.min-h-full {
-  min-height: 100%;
-}
-
-.min-h-screen {
-  min-height: 100vh;
-}
-
 .w-6\/12 {
   width: 50%;
 }
@@ -598,6 +590,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 .text-center {
@@ -817,6 +813,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .container-height {
   height: calc(100vh - 20px);
+  min-height: 724px;
 }
 
 .daylight-span {
